--- a/integration.yaml
+++ b/integration.yaml
@@ -26,7 +26,7 @@ summary: NPX
 
 # A paragraph or two describing what this integration does. Optional. Markdown.
 description: |
-    Integration with NPX.
+    NPX is an NPM package runner that makes it really easy to install any sort of node executable that would have normally been installed using NPM.
 
 # License information. Optional. If not specified, this integration is assumed
 # to be unlicensed proprietary code. Otherwise, must be a valid SPDX License
@@ -46,3 +46,6 @@ homepage: https://github.com/relay-integrations/relay-npx
 # URL to this integration's source code. Optional. If the homepage is a GitHub
 # link, may be inferred automatically.
 source: git://github.com/relay-integrations/relay-npx.git
+
+tags:
+  - utilities
