--- a/steps/npx-step-run-command/step.yaml
+++ b/steps/npx-step-run-command/step.yaml
@@ -18,7 +18,7 @@ summary: Run NPX command
 
 # Single-paragraph explanation of what this action does in more detail.
 # Optional. Markdown.
-description: This NPX step allows you to run a command in the context of a git resource
+description: Run NPX command in the context of a git resource.
 
 # URL or path relative to this file to an icon or icons representing this
 # action. Optional. Defaults to the integration icon.
