--- a/steps/npx-step-run-command/Dockerfile
+++ b/steps/npx-step-run-command/Dockerfile
@@ -11,7 +11,9 @@ RUN set -eux ; \
     mv ni-v1*-linux-amd64 /usr/local/bin/ni && \
     cd - && \
     rm -fr /tmp/ni
-RUN apt-get install jq
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  jq \
+  && rm -rf /var/lib/apt/lists/*
 COPY "./step.sh" "/nebula/step-npx.sh"
 ENTRYPOINT []
 CMD ["/bin/bash", "/nebula/step-npx.sh"]
